# dark-downloader

./: .env.example  .gitignore  README.md  analysis_options.yaml  analyze_verbose.txt  build_log.txt  build_log_2.txt  cors.json  cors_final.json  doc3.txt  extract_tools.ps1  fix_android_tools.ps1  flutter_rust_bridge.yaml  latest.json  optimized.modelfile  pubspec.yaml  setup_tools.ps1  test.dart  ultra_speed.modelfile
.github/: pull_request_template.md
.github/workflows/: ci.yml  main_build.yml  release.yml  supabase.yml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
assets/bootstrap/: desktop_tools_manifest.json  extractor_rules.json
assets/bundled_ytdlp/: README.md
assets/bundled_ytdlp/linux/: README.md
assets/bundled_ytdlp/windows/: README.md
backup_platforms/android/app/: build.gradle.kts
backup_platforms/linux/: CMakeLists.txt
backup_platforms/windows/: CMakeLists.txt
backup_platforms/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
backup_platforms/windows/runner/: Runner.rc
bundled_ytdlp/: README.md
cloudflare_bridge/: .env.example  add_dns_records.js  add_dns_records_v2.js  check_dns.js  check_domain.js  package-lock.json  package.json  setup_pages_domain.js  transfer_domain.js
cmake/: ffmpeg_bootstrap.cmake  ytdlp_bootstrap.cmake
extension/: background.js  content.js  manifest.json  popup.html  popup.js
installer/: dark_downloader.iss
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/bootstrap/: rust_lib_init.dart
lib/app/config/: auth_redirect.dart  brand_config.dart  breakpoints.dart  company_info.dart  localization.dart  platform_home_urls.dart  shipping_overrides.dart  supabase_config.dart  theme.dart
lib/app/models/: video_model.dart
lib/app/providers/: ai_assistant_provider.dart  auth_provider.dart  bookmarks_provider.dart  browser_history_provider.dart  browser_tabs_provider.dart  download_manager_provider.dart  entitlements_provider.dart  extractor_provider.dart  floating_download_bubble_provider.dart  history_provider.dart  incoming_link_provider.dart  locale_provider.dart  remote_config_provider.dart  theme_provider.dart  tool_bootstrap_provider.dart  toolkit_provider.dart  vault_provider.dart
lib/app/services/: ad_blocker_service.dart  background_service.dart  browser_bridge_service.dart  bundled_ffmpeg_path.dart  database_service.dart  device_metadata_service.dart  media_processor.dart  notification_service.dart  permission_service.dart  rule_pack_sync.dart  secure_storage_service.dart  security_service.dart  (+10 more)
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: Info.plist
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/.cargo/: audit.toml  config.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: adblock_engine.rs  debug_log.rs  download_checkpoint.rs  downloader.rs  downloader_inner.rs  extractor.rs  fix.py  fix2.py  mod.rs  models.rs  process_helper.rs  remote_rules.rs  rewrite_downloader.py  security.rs  stream_policy.rs  universal_extractor.rs  video_processor.rs  ytdlp_wrapper.rs
rust/src/api/downloader/: mod.rs
rust/src/api/extractor/: mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_dark_downloader.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_dark_downloader.podspec
rust_builder/windows/: CMakeLists.txt
scripts/: apply_auth_email_templates.ps1  auto_upload_templates.ps1  build_installer.ps1  build_release.ps1  build_release_for_website.ps1  build_release_for_website.sh  bundle_ffmpeg.dart  env_windows_rust_build.ps1  fetch_ffmpeg_bundles.ps1  fetch_ffmpeg_bundles.sh  fetch_ffmpeg_kit_android_maven_repo.ps1  fetch_ffmpeg_kit_android_maven_repo.sh  fetch_linux_ffmpeg.ps1  fetch_ytdlp_bundles.ps1  login_all.ps1  supabase_deploy.ps1  verify_bundled_ffmpeg.ps1
supabase/: config.toml  supabase.json
supabase/migrations/: 20260607000000_master_schema.sql  20260608000000_security_linter_fixes.sql  20260622000000_admin_security.sql  20260701000000_remove_monetization.sql  20260702000000_extractor_rules_table.sql
supabase/templates/: confirm_signup.html  confirmation.html  email_change.html  magic_link.html  recovery.html  reset_password.html
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  flutter_window.cpp  main.cpp
(+70 files in other folders)
