[package]
name = "rust_lib_dark_downloader"
version = "0.1.0"
edition = "2021"

[lints.rust]
# flutter_rust_bridge proc macros emit `cfg(frb_expand)`; register for check-cfg (Rust 1.80+).
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(frb_expand)"] }

[lib]
name = "rust_lib_dark_downloader"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "gzip", "brotli", "deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
regex = "1"
futures-util = "0.3"
url = "2"
urlencoding = "2"
dirs = "5"
parking_lot = "0.12"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
once_cell = "1.19"
ahash = "0.8"
aes-gcm = "0.10"
jsonwebtoken = "9"
argon2 = "0.5.3"
rand = "0.10.1"
obfstr = "0.4.4"
jni = "0.22.4"


# QuickJS is not linked on Android (no pregenerated bindings; bindgen needs libclang).
# YouTube decipher fallbacks that need JS return None / Err on Android; Rust cipher-op path still works.
[target.'cfg(not(target_os = "android"))'.dependencies]
rquickjs = { version = "0.8", features = [] }
machine-uid = "0.6"



[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
panic = "abort"
